--- a/app/src/main/res/layout/activity_podcasts.xml
+++ b/app/src/main/res/layout/activity_podcasts.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:padding="5dp"
     android:layout_height="match_parent"
-    tools:context=".VideoPlayer">
+    tools:context=".Podcasts">
+
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="30dp"
@@ -31,5 +31,6 @@
         android:textColor="@color/colorPrimary"
         android:id="@+id/novideos"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="No videos Available"/>
+        android:text="No podcasts Available"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
