--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,6 +7,27 @@
     android:padding="20dp"
     android:background="@drawable/p"
     tools:context=".ProfileActivity">
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="30dp"
+        android:background="@drawable/progress"
+        android:padding="5dp"
+        android:visibility="gone" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/nodocs"
+        android:layout_height="wrap_content"
+        android:text="You currently have no business documents"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/colorPrimary"/>
     <ImageView
         android:id="@+id/ic"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,13 +42,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_settings"
         android:layout_height="30dp" />
-    <ScrollView
-        android:id="@+id/scroll"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="5dp"
         android:layout_marginTop="228dp"
-        app:layout_constraintTop_toBottomOf="@id/ic">
-
-
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@id/ic"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
