--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -61,6 +61,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_settings"
         android:layout_height="30dp" />
+    <ImageView
+        android:id="@+id/logout"
+        android:layout_width="30dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_power"
+        android:layout_height="30dp" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
