--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:padding="5dp"
     android:layout_height="match_parent"
+    android:background="#9E9E9E"
     tools:context=".VideoPlayer">
     <ProgressBar
         android:id="@+id/progress"
