--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,6 +109,42 @@
                     android:drawableStart="@drawable/ic_search"
                     android:text="Find us"/>
             </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/videos"
+                app:layout_constraintBottom_toTopOf="@id/rate"
+                app:layout_constraintEnd_toStartOf="@id/magazine"
+                app:cardCornerRadius="8dp"
+                android:id="@+id/share"
+                android:padding="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimary"
+                    android:drawablePadding="5dp"
+                    android:drawableStart="@drawable/ic_share"
+                    android:text="Share"/>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/videos"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/magazine"
+                app:cardCornerRadius="8dp"
+                android:id="@+id/rate"
+                android:padding="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimary"
+                    android:drawablePadding="5dp"
+                    android:drawableStart="@drawable/ic_star"
+                    android:text="Rate Us"/>
+            </androidx.cardview.widget.CardView>
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/videos"
                 android:layout_width="wrap_content"
