--- a/app/src/main/res/layout/list_layouts.xml
+++ b/app/src/main/res/layout/list_layouts.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_marginTop="5dp"
+    android:id="@+id/linear"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
@@ -33,7 +34,7 @@
                     android:src="@drawable/icon" />
             </RelativeLayout>
             <HorizontalScrollView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:paddingEnd="5dp"
                 android:paddingStart="1dp"
                 android:layout_gravity="center_vertical"
@@ -53,9 +54,10 @@
 
             </HorizontalScrollView>
             </androidx.appcompat.widget.LinearLayoutCompat>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:background="@color/colorPrimary"/>
     </androidx.cardview.widget.CardView>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorPrimary"/>
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
