--- a/app/src/main/res/drawable/back.xml
+++ b/app/src/main/res/drawable/back.xml
@@ -2,11 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/colorAccent"
-        android:centerColor="@color/colorPrimary"
-        android:angle="90"
+        android:startColor="@color/colorPrimary"
         android:endColor="@color/colorPrimary"/>
-    <corners
-        android:bottomLeftRadius="80dp"
-        android:bottomRightRadius="80dp"/>
 </shape>
