--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,18 @@
         android:src="@drawable/icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_more"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="iGrand"
+        android:text="iGrand Business Plans"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@id/icon"
         app:layout_constraintStart_toEndOf="@id/icon" />
@@ -31,7 +38,7 @@
         android:id="@+id/greeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:text="Good morning"
         android:textColor="@color/colorAccent"
         android:textSize="15sp"
@@ -60,7 +67,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="30dp"
         app:cardCornerRadius="8dp"
         android:id="@+id/info"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,77 +81,7 @@
             android:paddingTop="5dp"
             android:paddingEnd="20dp"
             android:paddingBottom="5dp">
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/videos"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/magazine"
-                app:cardCornerRadius="8dp"
-                android:id="@+id/call_us"
-                android:padding="5dp"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:drawablePadding="5dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorPrimary"
-                    android:drawableStart="@drawable/ic_local_phone"
-                    android:text="Call/Text"/>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/videos"
-                app:layout_constraintTop_toBottomOf="@id/call_us"
-                app:layout_constraintEnd_toStartOf="@id/magazine"
-                app:cardCornerRadius="8dp"
-                android:id="@+id/find_us"
-                android:padding="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorPrimary"
-                    android:drawablePadding="5dp"
-                    android:drawableStart="@drawable/ic_search"
-                    android:text="Find us"/>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/videos"
-                app:layout_constraintBottom_toTopOf="@id/rate"
-                app:layout_constraintEnd_toStartOf="@id/magazine"
-                app:cardCornerRadius="8dp"
-                android:id="@+id/share"
-                android:padding="10dp"
-                android:layout_marginBottom="5dp"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorPrimary"
-                    android:drawablePadding="5dp"
-                    android:drawableStart="@drawable/ic_share"
-                    android:text="Share"/>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/videos"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/magazine"
-                app:cardCornerRadius="8dp"
-                android:id="@+id/rate"
-                android:padding="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorPrimary"
-                    android:drawablePadding="5dp"
-                    android:drawableStart="@drawable/ic_star"
-                    android:text="Rate Us"/>
-            </androidx.cardview.widget.CardView>
+
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/videos"
                 android:layout_width="wrap_content"
@@ -294,64 +231,24 @@
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="wrap_content">
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardCornerRadius="8dp"
+                android:layout_marginTop="20dp"
+                android:layout_height="wrap_content">
+            <com.synnapps.carouselview.CarouselView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:pageColor="#000"
+                android:id="@+id/slider"
+                app:fillColor="@color/colorWhite"
+                app:slideInterval="3000"
+                app:strokeWidth="2dp"
+                app:radius="8dp"
+                app:strokeColor="#FF777777"/>
+            </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        app:cardCornerRadius="8dp"
-        android:id="@+id/mission"
-        android:layout_marginTop="20dp"
-        android:layout_height="wrap_content">
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="15sp"
-                android:textColor="@color/colorAccent"
-                android:text="Mission:"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="15sp"
-                android:textColor="@color/colorPrimary"
-                android:text="@string/mission"/>
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mission"
-        app:cardCornerRadius="8dp"
-        android:id="@+id/values"
-        android:layout_marginTop="20dp"
-        android:layout_height="wrap_content">
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="15sp"
-                android:textColor="@color/colorAccent"
-                android:text="Values:"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="15sp"
-                android:textColor="@color/colorPrimary"
-                android:text="Professionalism, responsiveness and honesty."/>
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/values"
         app:cardCornerRadius="8dp"
         android:layout_marginTop="20dp"
         android:layout_height="wrap_content">
@@ -372,11 +269,12 @@
                 android:gravity="center"
                 android:textSize="15sp"
                 android:textColor="@color/colorPrimary"
-                android:text="Business Reviews and Plans\nAnalysis\nCapital Raising"/>
+                android:text="Business Plans\nBusiness Reviews"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.cardview.widget.CardView>
         </androidx.appcompat.widget.LinearLayoutCompat>
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <include layout="@layout/bottom_sheet"/>
+    <include layout="@layout/bottom_details"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
